# kekahyde

./: .gitignore  .gitmodules  Cargo.toml  HOW-P2P-WORKS.md  README.md
.github/workflows/: build.yml
rust/: Cargo.toml
rust/src/: main.rs
src/: hybrid.rs  main.rs  model.rs  monitor.rs  server.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  server.rs
