[package]
name = "kekahyde"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
llama-cpp-2 = "0.1.130"
num_cpus = "1.17"
tracing = "0.1.44"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
tokio-util = "0.7"
sha2 = "0.10"
